# real-time-aggregation

./: .gitignore  README.md  docker-compose-app.yaml  docker-compose-infra.yaml  docker-compose-streaming.yaml
aggregator/: Dockerfile  README.md  pyproject.toml
aggregator/jobs/: base.py  mongo.py
aggregator/libs/job_templates/: base.py  mongo.py
aggregator/libs/program_args/: base.py
aggregator/libs/utils/: common.py
aggregator/libs/writers/: __init__.py  base.py  console.py  mongo.py
aggregator/sql_files/: avg_interactions_per_item_5m.sql  avg_interactions_per_item_whole.sql  avg_interactions_per_user_5m.sql  avg_interactions_per_user_whole.sql  interactions_per_item_5m.sql  interactions_per_user_5m.sql  max_min_per_item.sql
generator/: .dockerignore  Dockerfile  README.md  generator.py  pyproject.toml
storage/: mongo-init.js
visualization/: Dockerfile  README.md  main.py  pyproject.toml
