[tool.poetry]
name = "data-aggregator"
version = "0.1.0"
description = ""
authors = ["Fari Andana <fariqodri21@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.10"

[tool.poetry.group.dev.dependencies]
pyspark = "3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
