[tool.poetry]
name = "real-time-visualization"
version = "0.1.0"
description = ""
authors = ["Fari Andana <fariqodri21@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.10"
streamlit = "^1.39.0"
pymongo = "^4.10.1"
plotly = "^5.24.1"
streamlit-autorefresh = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
